footer and forms

--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -1043,74 +1043,76 @@
                 <div class="footer__primary">
                     <div class="footer__summary">
                         <b class="footer__heading title" id="contacts">
-                            Let’s stay connected
+                            Оставайтесь на связи
                         </b>
-                        <div class="footer__slogan">
-                            Get in touch with Quotalogic.<br class="desktop-only">
-                            Call us or email and we'll get back to you as soon as possible!
-                        </div>
                         <div class="footer__contacts">
                             <div class="footer__channel">
                                 <div class="footer__param">
                                     Email
                                 </div>
                                 <div class="footer__value">
-                                    <a class="button-alike-link" href="mailto:mail@quotalogic.io">
+                                    <a class="button-alike-link" href="mailto:mail@quotcat.ru">
                                         <span class="button-alike-link__inline">
-                                            mail@quotalogic.io
+                                            mail@quotcat.ru
                                         </span>
                                     </a>
                                 </div>
                             </div>
                             <div class="footer__channel">
                                 <div class="footer__param">
-                                    Phone
+                                    Телефон
                                 </div>
                                 <div class="footer__value">
                                     <a class="button-alike-link button-alike-link--no-hover" href="tel:+358451683959">
                                         <span class="button-alike-link__inline">
-                                            🇫🇮 +358 45 168 39-59
+                                            🇷🇺 +7 911 118-60-16
                                         </span>
                                     </a>
                                 </div>
                             </div>
                         </div>
+                        <div class="footer__requisites">
+                            ООО “ПРАЙС ИНЖИНИРИНГ”<br>
+                            ИНН: 7816735563<br>
+                            ОГРН: 1227800140259<br>
+                            192289, <span class="nobr">Санкт-Петербург г</span>, <span class="nobr">вн.тер.г. муниципальный</span> округ Александровский, <span class="nobr">ул Софийская, д. 72</span>, <span class="nobr">литера А</span>, <span class="nobr">помещ. 2.97</span>
+                        </div>
                     </div>
                     <div class="footer__feedbacks">
                         <form class="contact">
                             <b class="contact__heading">
-                                Contact us
+                                Свяжитесь с нами
                             </b>
                             <div class="contact__fieldset">
                                 <div class="contact__field input">
-                                    <input class="input__widget" name="email" type="text" placeholder="Email address">
+                                    <input class="input__widget" name="email" type="text" placeholder="Email">
                                 </div>
                                 <div class="contact__field input input--area">
-                                    <textarea class="input__widget" name="message" placeholder="Message" rows="4"></textarea>
+                                    <textarea class="input__widget" name="message" placeholder="Сообщение" rows="4"></textarea>
                                 </div>
                             </div>
                             <div class="contact__footer">
-                                <button class="contact__submit button button--submit" type="submit">Send message</button>
-                                <div class="contact__note">We will not use your contacts to pass them on to third parties. Only to reply to&nbsp;you.</div>
+                                <button class="contact__submit button button--submit" type="submit">Отправить</button>
+                                <div class="contact__note">Мы не передаем контакты третьим лицам. Они используются только для ответа вам.</div>
                             </div>
                         </form>
                         <div class="inner-alert inner-alert--success" style="display: none;">
                             <div class="inner-alert__heading">
-                                Thank you for your request
+                                Спасибо за ваш запрос
                             </div>
                             <button class="inner-alert__action button button--submit" type="button">
-                                Send another massage
+                                Отправить ещё одно сообщение
                             </button>
                         </div>
                         <div class="inner-alert inner-alert--danger" style="display: none;">
                             <div class="inner-alert__heading">
-                                Form has not been sent
+                                Данные не были отправлены
                             </div>
                             <div class="inner-alert__description">
-                                Something went wrong. Check your internet connection, and try again.
+                                Что-то пошло не так. Проверьте подключение к интернету и попробуйте еще раз.
                             </div>
                             <button class="inner-alert__action button button--submit" type="button">
-                                Try again
+                                Попробовать ещё
                             </button>
                         </div>
                     </div>
@@ -1142,7 +1144,7 @@
                         </div>
                     </div>
                     <div class="footer__copyright">
-                        © 2023 Quotalogic. All rights reserved
+                        2024 Quotcat
                     </div>
                 </div>
             </div>
@@ -1150,43 +1152,43 @@
 
         <div class="window mfp-hide" id="demo">
             <button class="window__close mfp-close" type="button">
-                Close
+                Закрыть
             </button>
             <div class="window__body">
                 <form class="contact contact--in-modal">
                     <b class="contact__heading">
-                        Contact us
+                        Оставайтесь на связи
                     </b>
                     <div class="contact__fieldset">
                         <div class="contact__field input">
-                            <input class="input__widget" name="email" type="text" placeholder="Email address">
+                            <input class="input__widget" name="email" type="text" placeholder="Email">
                         </div>
                         <div class="contact__field input input--area">
-                            <textarea class="input__widget" name="message" placeholder="Message" rows="4"></textarea>
+                            <textarea class="input__widget" name="message" placeholder="Сообщение" rows="4"></textarea>
                         </div>
                     </div>
                     <div class="contact__footer">
-                        <button class="contact__submit button button--submit" type="submit">Send message</button>
-                        <div class="contact__note">We will not use your contacts to pass them on to third parties. Only to reply to&nbsp;you.</div>
+                        <button class="contact__submit button button--submit" type="submit">Отправить</button>
+                        <div class="contact__note">Мы не передаем контакты третьим лицам. Они используются только для ответа вам.</div>
                     </div>
                 </form>
                 <div class="inner-alert inner-alert--in-modal inner-alert--success" style="display: none;">
                     <div class="inner-alert__heading">
-                        Thank you for your request
+                        Спасибо за ваш запрос
                     </div>
                     <button class="inner-alert__action button button--submit" type="button">
-                        Send another massage
+                        Отправить ещё одно сообщение
                     </button>
                 </div>
                 <div class="inner-alert inner-alert--in-modal inner-alert--danger" style="display: none;">
                     <div class="inner-alert__heading">
-                        Form has not been sent
+                        Данные не были отправлены
                     </div>
                     <div class="inner-alert__description">
-                        Something went wrong. Check your internet connection, and try again.
+                        Что-то пошло не так. Проверьте подключение к интернету и попробуйте еще раз.
                     </div>
                     <button class="inner-alert__action button button--submit" type="button">
-                        Try again
+                        Попробовать ещё
                     </button>
                 </div>
             </div>
