--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -676,6 +676,19 @@
                 <div class="about__body">
                     <div class="about__section">
                         <h3 class="about__sub-heading">
+                            Стек технологий
+                        </h3>
+                        <div class="about__description wysiwyg">
+                            <p>
+                                Языки программирования: TO DO<br>
+                                Операционные системы: TO DO<br>
+                                Библиотеки: TO DO<br>
+                                Фреймворки: TO DO
+                            </p>
+                        </div>
+                    </div>
+                    <div class="about__section">
+                        <h3 class="about__sub-heading">
                             Центр достоверных данных
                         </h3>
                         <div class="about__description wysiwyg">
