--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -678,13 +678,14 @@
                         <h3 class="about__sub-heading">
                             Стек технологий
                         </h3>
-                        <div class="about__description wysiwyg">
-                            <p>
-                                Языки программирования: TO DO<br>
-                                Операционные системы: TO DO<br>
-                                Библиотеки: TO DO<br>
-                                Фреймворки: TO DO
-                            </p>
+                        <div class="about__description about__description--wide wysiwyg">
+                            <ul>
+                                <li>Языки программирования: Kotlin, Go, TypeScript и JavaScript</li>
+                                <li>Операционные системы: Debian</li>
+                                <li>Инфраструктура: Kubernetes, PostgreSQL, Redis, S3</li>
+                                <li>Библиотеки: JOOQ, Apache Kafka clients, ibm/sarama, AWS S3 sdk, go-redis, redisson, gorm</li>
+                                <li>Фреймворки: Ktor, gin, Next.js
+                            </ul>
                         </div>
                     </div>
                     <div class="about__section">
