--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -579,10 +579,10 @@
                     </div>
                     <div class="basics__preview">
                         <picture>
-                            <source srcset="../global/content/basics-meaning@2x.avif 2x, ../global/content/basics-meaning.avif" type="image/avif">
+                            <source srcset="content/basics-meaning@2x.avif 2x, content/basics-meaning.avif" type="image/avif">
                             <img class="basics__illustration"
-                                 srcset="../global/content/basics-meaning@2x.jpg 2x"
-                                 src="../global/content/basics-meaning.jpg"
+                                 srcset="content/basics-meaning@2x.jpg 2x"
+                                 src="content/basics-meaning.jpg"
                                  width="704"
                                  height="352"
                                  alt=""
@@ -599,10 +599,10 @@
                     </div>
                     <div class="basics__preview">
                         <picture>
-                            <source srcset="../global/content/basics-integrations@2x.avif 2x, ../global/content/basics-integrations.avif" type="image/avif">
+                            <source srcset="content/basics-integrations@2x.avif 2x, content/basics-integrations.avif" type="image/avif">
                             <img class="basics__illustration"
-                                 srcset="../global/content/basics-integrations@2x.jpg 2x"
-                                 src="../global/content/basics-integrations.jpg"
+                                 srcset="content/basics-integrations@2x.jpg 2x"
+                                 src="content/basics-integrations.jpg"
                                  width="435"
                                  height="337"
                                  alt=""
@@ -631,8 +631,8 @@
                     </div>
                     <div class="basics__preview">
                         <video class="basics__video" autoplay muted playsinline loop>
-                            <source src="../global/content/basics-omnichanelling.webm" type="video/webm">
-                            <source src="../global/content/basics-omnichanelling.mp4" type="video/mp4">
+                            <source src="content/basics-omnichanelling.webm" type="video/webm">
+                            <source src="content/basics-omnichanelling.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
