--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -432,12 +432,12 @@
                             </ul>
                         </div>
                         <picture>
-                            <source media="(max-width: 600px)" srcset="../global/content/benefits-screenshot-a-smartphone@2x.avif 2x, ../global/content/benefits-screenshot-a-desktop.avif" type="image/avif">
-                            <source media="(max-width: 600px)" srcset="../global/content/benefits-screenshot-a-smartphone@2x.jpg 2x, ../global/content/benefits-screenshot-a-desktop.jpg">
-                            <source media="(min-width: 600px)" srcset="../global/content/benefits-screenshot-a-desktop@2x.avif 2x, ../global/content/benefits-screenshot-a-desktop.avif" type="image/avif">
-                            <source media="(min-width: 600px)" srcset="../global/content/benefits-screenshot-a-desktop@2x.jpg 2x, ../global/content/benefits-screenshot-a-desktop.jpg">
+                            <source media="(max-width: 600px)" srcset="content/benefits-screenshot-a-smartphone@2x.avif 2x, content/benefits-screenshot-a-desktop.avif" type="image/avif">
+                            <source media="(max-width: 600px)" srcset="content/benefits-screenshot-a-smartphone@2x.jpg 2x, content/benefits-screenshot-a-desktop.jpg">
+                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-a-desktop@2x.avif 2x, content/benefits-screenshot-a-desktop.avif" type="image/avif">
+                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-a-desktop@2x.jpg 2x, content/benefits-screenshot-a-desktop.jpg">
                             <img class="benefits__screenshot"
-                                 src="../global/content/benefits-screenshot-a-desktop.jpg"
+                                 src="content/benefits-screenshot-a-desktop.jpg"
                                  width="622"
                                  height="466"
                                  alt=""
@@ -458,14 +458,12 @@
                             </ul>
                         </div>
                         <picture>
-                            <source media="(max-width: 749px)" srcset="../global/content/benefits-screenshot-b-smartphone@2x.avif 2x, ../global/content/benefits-screenshot-b-desktop.avif" type="image/avif">
-                            <source media="(max-width: 749px)" srcset="../global/content/benefits-screenshot-b-smartphone@2x.webp 2x, ../global/content/benefits-screenshot-b-desktop.webp" type="image/webp">
-                            <source media="(max-width: 749px)" srcset="../global/content/benefits-screenshot-b-smartphone@2x.png 2x, ../global/content/benefits-screenshot-b-desktop.png">
-                            <source media="(min-width: 600px)" srcset="../global/content/benefits-screenshot-b-desktop@2x.avif 2x, ../global/content/benefits-screenshot-b-desktop.avif" type="image/avif">
-                            <source media="(min-width: 600px)" srcset="../global/content/benefits-screenshot-b-desktop@2x.webp 2x, ../global/content/benefits-screenshot-b-desktop.webp" type="image/webp">
-                            <source media="(min-width: 600px)" srcset="../global/content/benefits-screenshot-b-desktop@2x.png 2x, ../global/content/benefits-screenshot-b-desktop.png">
+                            <source media="(max-width: 749px)" srcset="content/benefits-screenshot-b-smartphone@2x.avif 2x, content/benefits-screenshot-b-desktop.avif" type="image/avif">
+                            <source media="(max-width: 749px)" srcset="content/benefits-screenshot-b-smartphone@2x.png 2x, content/benefits-screenshot-b-desktop.png">
+                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.avif 2x, content/benefits-screenshot-b-desktop.avif" type="image/avif">
+                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.png 2x, content/benefits-screenshot-b-desktop.png">
                             <img class="benefits__screenshot"
-                                 src="../global/content/benefits-screenshot-b-desktop.png"
+                                 src="content/benefits-screenshot-b-desktop.png"
                                  width="622"
                                  height="466"
                                  alt=""
