--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -274,10 +274,10 @@
                     </a>
                 </div>
                 <picture>
-                    <source srcset="../global/content/start@2x.avif 2x, ../global/content/start.avif" type="image/avif">
+                    <source srcset="content/start@2x.avif 2x, content/start.avif" type="image/avif">
                     <img class="start__rocket"
-                         srcset="../global/content/start@2x.png 2x"
-                         src="../global/content/start.png"
+                         srcset="content/start@2x.png 2x"
+                         src="content/start.png"
                          width="192"
                          height="324"
                          alt=""
