--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -377,14 +377,12 @@
                     <div class="sales__preview">
                         <div class="sales__media">
                             <picture>
-                                <source media="(max-width: 749px)" srcset="../global/content/sales-smartphone@2x.avif 2x, ../global/content/sales-smartphone.avif" type="image/avif">
-                                <source media="(max-width: 749px)" srcset="../global/content/sales-smartphone@2x.webp 2x, ../global/content/sales-smartphone.webp" type="image/webp">
-                                <source media="(max-width: 749px)" srcset="../global/content/sales-smartphone@2x.png 2x, ../global/content/sales-smartphone.png">
-                                <source media="(min-width: 600px)" srcset="../global/content/sales-desktop@2x.avif 2x, ../global/content/sales-desktop.avif" type="image/avif">
-                                <source media="(min-width: 600px)" srcset="../global/content/sales-desktop@2x.webp 2x, ../global/content/sales-desktop.webp" type="image/webp">
-                                <source media="(min-width: 600px)" srcset="../global/content/sales-desktop@2x.png 2x, ../global/content/sales-desktop.png">
+                                <source media="(max-width: 749px)" srcset="content/sales-smartphone@2x.avif 2x, content/sales-smartphone.avif" type="image/avif">
+                                <source media="(max-width: 749px)" srcset="content/sales-smartphone@2x.png 2x, content/sales-smartphone.png">
+                                <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.avif 2x, content/sales-desktop.avif" type="image/avif">
+                                <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.png 2x, content/sales-desktop.png">
                                 <img class="sales__illustration"
-                                     src="../global/content/sales-desktop.png"
+                                     src="content/sales-desktop.png"
                                      width="762"
                                      height="696"
                                      alt=""
