--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -192,12 +192,12 @@
                 </div>
                 <div class="truth__preview">
                     <picture>
-                        <source media="(max-width: 749px)" srcset="../global/content/truth-smartphone@2x.avif 2x, ../global/content/truth-smartphone.avif" type="image/avif">
-                        <source media="(max-width: 749px)" srcset="../global/content/truth-smartphone@2x.jpg 2x, ../global/content/truth-smartphone.jpg">
-                        <source media="(min-width: 600px)" srcset="../global/content/truth-desktop@2x.avif 2x, ../global/content/truth-desktop.avif" type="image/avif">
-                        <source media="(min-width: 600px)" srcset="../global/content/truth-desktop@2x.jpg 2x, ../global/content/truth-desktop.jpg">
+                        <source media="(max-width: 749px)" srcset="content/truth-smartphone@2x.avif 2x, content/truth-smartphone.avif" type="image/avif">
+                        <source media="(max-width: 749px)" srcset="content/truth-smartphone@2x.jpg 2x, content/truth-smartphone.jpg">
+                        <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.avif 2x, content/truth-desktop.avif" type="image/avif">
+                        <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.jpg 2x, content/truth-desktop.jpg">
                         <img class="truth__illustration"
-                             src="../global/content/truth-desktop.jpg"
+                             src="content/truth-desktop.jpg"
                              width="644"
                              height="541"
                              alt=""
