--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -310,8 +310,8 @@
                 <div class="catalog__body">
                     <div class="catalog__preview">
                         <video class="catalog__illustration" width="530" autoplay muted playsinline loop>
-                             <source src="../global/content/catalog.webm" type="video/webm">
-                            <source src="../global/content/catalog.mp4" type="video/mp4">
+                            <source src="content/catalog.webm" type="video/webm">
+                            <source src="content/catalog.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="catalog__description wysiwyg">
