--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -292,8 +292,8 @@
             <div class="sharing__body">
                 <div class="sharing__preview">
                     <video class="sharing__illustration" width="588" autoplay muted playsinline loop>
-                         <source src="../global/content/sharing.webm" type="video/webm">
-                        <source src="../global/content/sharing.mp4" type="video/mp4">
+<!--                         <source src="content/sharing.webm" type="video/webm">-->
+                        <source src="content/sharing.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="sharing__description wysiwyg">
