--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -242,8 +242,8 @@
             <div class="networks__stage container container--wide">
                 <div class="networks__preview">
                     <video class="networks__illustration" width="1360" autoplay muted playsinline loop>
-                         <source src="../global/content/networks.webm" type="video/webm">
-                        <source src="../global/content/networks.mp4" type="video/mp4">
+                        <source src="content/networks.webm" type="video/webm">
+                        <source src="content/networks.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -292,7 +292,7 @@
             <div class="sharing__body">
                 <div class="sharing__preview">
                     <video class="sharing__illustration" width="588" autoplay muted playsinline loop>
-<!--                         <source src="content/sharing.webm" type="video/webm">-->
+                        <source src="content/sharing.webm" type="video/webm">
                         <source src="content/sharing.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -1035,6 +1035,64 @@
                     </tr>
                 </tbody>
             </table>
+        </section>
+        <section class="partners">
+            <div class="partners__wrap container container--wide">
+                <h2 class="partners__heading title">
+                    Нам доверяют
+                </h2>
+                <div class="partners__list">
+                    <div class="partners__item">
+                        <img class="partners__image"
+                             srcset="content/partner-a@2x.jpg 2x"
+                             src="content/partner-a@1x.jpg"
+                             alt=""
+                        >
+                    </div>
+                    <div class="partners__item">
+                        <img class="partners__image"
+                             srcset="content/partner-b@2x.jpg 2x"
+                             src="content/partner-b@1x.jpg"
+                             alt=""
+                        >
+                    </div>
+                    <div class="partners__item">
+                        <img class="partners__image"
+                             srcset="content/partner-c@2x.jpg 2x"
+                             src="content/partner-c@1x.jpg"
+                             alt=""
+                        >
+                    </div>
+                    <div class="partners__item">
+                        <img class="partners__image"
+                             srcset="content/partner-d@2x.jpg 2x"
+                             src="content/partner-d@1x.jpg"
+                             alt=""
+                        >
+                    </div>
+                    <div class="partners__item">
+                        <img class="partners__image"
+                             srcset="content/partner-e@2x.jpg 2x"
+                             src="content/partner-e@1x.jpg"
+                             alt=""
+                        >
+                    </div>
+                    <div class="partners__item">
+                        <img class="partners__image"
+                             srcset="content/partner-f@2x.jpg 2x"
+                             src="content/partner-f@1x.jpg"
+                             alt=""
+                        >
+                    </div>
+                    <div class="partners__item">
+                        <img class="partners__image"
+                             srcset="content/partner-g@2x.jpg 2x"
+                             src="content/partner-g@1x.jpg"
+                             alt=""
+                        >
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="now">
             <div class="now__wrap container">
