stack and partners

--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -662,6 +662,22 @@
                 С инновационным подходом к управлению данными мы создаем универсальное рабочее пространство для B2B и B2C продаж, оснащенное инструментами для управления PIM, создания коммерческих предложений и управления ценами, специально адаптированными под потребности дистрибьюторов и дилеров.
             </div>
         </section>
+        <div class="techs">
+            <div class="techs__wrap container container--wide">
+                <h3 class="techs__heading title">
+                    Стек технологий:
+                </h3>
+                <div class="techs__body">
+                    <ul class="techs__list">
+                        <li class="techs__item"><strong class="techs__label">Языки программирования:</strong> Kotlin, Go, TypeScript и JavaScript</li>
+                        <li class="techs__item"><strong class="techs__label">Операционные системы:</strong> Debian</li>
+                        <li class="techs__item"><strong class="techs__label">Инфраструктура:</strong> Kubernetes, PostgreSQL, Redis, S3</li>
+                        <li class="techs__item"><strong class="techs__label">Библиотеки:</strong> JOOQ, Apache Kafka clients, ibm/sarama, AWS S3 sdk, go-redis, redisson, gorm</li>
+                        <li class="techs__item"><strong class="techs__label">Фреймворки:</strong> Ktor, gin, Next.js
+                    </ul>
+                </div>
+            </div>
+        </div>
         <section class="about">
             <div class="about__wrap container container--wide">
                 <div class="about__head">
@@ -670,20 +686,6 @@
                     </h2>
                 </div>
                 <div class="about__body">
-                    <div class="about__section">
-                        <h3 class="about__sub-heading">
-                            Стек технологий
-                        </h3>
-                        <div class="about__description about__description--wide wysiwyg">
-                            <ul>
-                                <li>Языки программирования: Kotlin, Go, TypeScript и JavaScript</li>
-                                <li>Операционные системы: Debian</li>
-                                <li>Инфраструктура: Kubernetes, PostgreSQL, Redis, S3</li>
-                                <li>Библиотеки: JOOQ, Apache Kafka clients, ibm/sarama, AWS S3 sdk, go-redis, redisson, gorm</li>
-                                <li>Фреймворки: Ktor, gin, Next.js
-                            </ul>
-                        </div>
-                    </div>
                     <div class="about__section">
                         <h3 class="about__sub-heading">
                             Центр достоверных данных
@@ -1042,55 +1044,78 @@
                     Нам доверяют
                 </h2>
                 <div class="partners__list">
-                    <div class="partners__item">
+                    <a class="partners__item" href="https://astrade.ru">
                         <img class="partners__image"
-                             srcset="content/partner-a@2x.jpg 2x"
-                             src="content/partner-a@1x.jpg"
+                             src="content/partner-astrade.svg"
+                             width="200"
+                             height="100"
                              alt=""
                         >
-                    </div>
-                    <div class="partners__item">
+                    </a>
+                    <a class="partners__item" href="https://www.quantexlab.ru">
                         <img class="partners__image"
-                             srcset="content/partner-b@2x.jpg 2x"
-                             src="content/partner-b@1x.jpg"
+                             src="content/partner-quantex.svg"
+                             width="200"
+                             height="100"
                              alt=""
                         >
-                    </div>
-                    <div class="partners__item">
+                    </a>
+                    <a class="partners__item" href="https://sivik.ru">
                         <img class="partners__image"
-                             srcset="content/partner-c@2x.jpg 2x"
-                             src="content/partner-c@1x.jpg"
+                             src="content/partner-sivik.svg"
+                             width="200"
+                             height="100"
                              alt=""
                         >
-                    </div>
-                    <div class="partners__item">
+                    </a>
+                    <a class="partners__item" href="https://amotivegroup.ru">
                         <img class="partners__image"
-                             srcset="content/partner-d@2x.jpg 2x"
-                             src="content/partner-d@1x.jpg"
+                             src="content/partner-avtomotiv.svg"
+                             width="200"
+                             height="100"
                              alt=""
                         >
-                    </div>
-                    <div class="partners__item">
+                    </a>
+                    <a class="partners__item" href="https://www.technovector.ru">
                         <img class="partners__image"
-                             srcset="content/partner-e@2x.jpg 2x"
-                             src="content/partner-e@1x.jpg"
+                             src="content/partner-technovector.svg"
+                             width="200"
+                             height="100"
                              alt=""
                         >
-                    </div>
-                    <div class="partners__item">
+                    </a>
+                    <a class="partners__item" href="#">
                         <img class="partners__image"
-                             srcset="content/partner-f@2x.jpg 2x"
-                             src="content/partner-f@1x.jpg"
+                             src="content/partner-astrade.svg"
+                             width="200"
+                             height="100"
                              alt=""
                         >
-                    </div>
-                    <div class="partners__item">
+                    </a>
+                    <a class="partners__item" href="#">
                         <img class="partners__image"
-                             srcset="content/partner-g@2x.jpg 2x"
-                             src="content/partner-g@1x.jpg"
+                             src="content/partner-astrade.svg"
+                             width="200"
+                             height="100"
                              alt=""
                         >
-                    </div>
+                    </a>
+                    <a class="partners__item" href="#">
+                        <img class="partners__image"
+                             src="content/partner-astrade.svg"
+                             width="200"
+                             height="100"
+                             alt=""
+                        >
+                    </a>
+                    <a class="partners__item" href="#">
+                        <img class="partners__image"
+                             src="content/partner-astrade.svg"
+                             width="200"
+                             height="100"
+                             alt=""
+                        >
+                    </a>
                 </div>
             </div>
         </section>
