--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -1084,33 +1084,25 @@
                              alt=""
                         >
                     </a>
-                    <a class="partners__item" href="#">
+                    <a class="partners__item" href="https://brainstorm-group.ru">
                         <img class="partners__image"
-                             src="content/partner-astrade.svg"
+                             src="content/partner-brain-storm.svg"
                              width="200"
                              height="100"
                              alt=""
                         >
                     </a>
-                    <a class="partners__item" href="#">
+                    <a class="partners__item" href="https://launch-russia.ru">
                         <img class="partners__image"
-                             src="content/partner-astrade.svg"
+                             src="content/partner-launch.svg"
                              width="200"
                              height="100"
                              alt=""
                         >
                     </a>
-                    <a class="partners__item" href="#">
+                    <a class="partners__item" href="https://optima-trade.ru">
                         <img class="partners__image"
-                             src="content/partner-astrade.svg"
-                             width="200"
-                             height="100"
-                             alt=""
-                        >
-                    </a>
-                    <a class="partners__item" href="#">
-                        <img class="partners__image"
-                             src="content/partner-astrade.svg"
+                             src="content/partner-optima-trade.svg"
                              width="200"
                              height="100"
                              alt=""
