--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -1041,7 +1041,7 @@
                     Нам доверяют
                 </h2>
                 <div class="partners__list">
-                    <a class="partners__item" href="https://astrade.ru">
+                    <a class="partners__item" target="_blank" href="https://astrade.ru">
                         <img class="partners__image"
                              src="content/partner-astrade.svg"
                              width="200"
@@ -1049,7 +1049,7 @@
                              alt=""
                         >
                     </a>
-                    <a class="partners__item" href="https://www.quantexlab.ru">
+                    <a class="partners__item" target="_blank" href="https://www.quantexlab.ru">
                         <img class="partners__image"
                              src="content/partner-quantex.svg"
                              width="200"
@@ -1057,7 +1057,7 @@
                              alt=""
                         >
                     </a>
-                    <a class="partners__item" href="https://sivik.ru">
+                    <a class="partners__item" target="_blank" href="https://sivik.ru">
                         <img class="partners__image"
                              src="content/partner-sivik.svg"
                              width="200"
@@ -1065,7 +1065,7 @@
                              alt=""
                         >
                     </a>
-                    <a class="partners__item" href="https://amotivegroup.ru">
+                    <a class="partners__item" target="_blank" href="https://amotivegroup.ru">
                         <img class="partners__image"
                              src="content/partner-avtomotiv.svg"
                              width="200"
@@ -1073,7 +1073,7 @@
                              alt=""
                         >
                     </a>
-                    <a class="partners__item" href="https://www.technovector.ru">
+                    <a class="partners__item" target="_blank" href="https://www.technovector.ru">
                         <img class="partners__image"
                              src="content/partner-technovector.svg"
                              width="200"
@@ -1081,23 +1081,15 @@
                              alt=""
                         >
                     </a>
-                    <a class="partners__item" href="https://brainstorm-group.ru">
+                    <a class="partners__item" target="_blank" href="https://www.grunbaum.ru">
                         <img class="partners__image"
-                             src="content/partner-brain-storm.svg"
+                             src="content/partner-grunbaum.svg"
                              width="200"
                              height="100"
                              alt=""
                         >
                     </a>
-                    <a class="partners__item" href="https://launch-russia.ru">
-                        <img class="partners__image"
-                             src="content/partner-launch.svg"
-                             width="200"
-                             height="100"
-                             alt=""
-                        >
-                    </a>
-                    <a class="partners__item" href="https://optima-trade.ru">
+                    <a class="partners__item" target="_blank" href="https://optima-trade.ru">
                         <img class="partners__image"
                              src="content/partner-optima-trade.svg"
                              width="200"
